force-app/main/default/objects/T_Object__c/T_Object__c.object-meta.xml
<CustomObject>
    <description>Object Created to test the Order of execution of triggers and workflow</description>
    <label>T_Object</label>
    <nameField>
        <label>T_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_Object</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>