force-app/main/default/objects/T_Object__c/fields/Contact_no__c.field-meta.xml
<CustomField>
    <fullName>Contact_no__c</fullName>
    <label>Contact_no</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>