force-app/main/default/objects/T_Object__c/fields/SP1__c.field-meta.xml
<CustomField>
    <fullName>SP1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Rep 1</description>
    <label>SP1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SP1</relationshipName>
    <type>Lookup</type>
</CustomField>