force-app/main/default/objects/T_Object__c/fields/SP2__c.field-meta.xml
<CustomField>
    <fullName>SP2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Rep 2</description>
    <label>SP2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SP2</relationshipName>
    <type>Lookup</type>
</CustomField>