force-app/main/default/objects/T_Object__c/validationRules/ContactBlankCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactBlankCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Contact_no__c == 111</errorConditionFormula>
    <errorMessage>Validation Rule : Blank value cant be saved for Contact</errorMessage>
</ValidationRule>