force-app/main/default/objects/T_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>